force-app/main/default/objects/StripeAuth__c/StripeAuth__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Stripe Authorization Credentials &amp; Base_URL</description>
    <label>Stripe Auth</label>
</CustomObject>