force-app/main/default/objects/StripeAuth__c/fields/API_URL__c.field-meta.xml
<CustomField>
    <fullName>API_URL__c</fullName>
    <label>API URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>