force-app/main/default/objects/StripeAuth__c/fields/PUBLISHABLE_KEY__c.field-meta.xml
<CustomField>
    <fullName>PUBLISHABLE_KEY__c</fullName>
    <label>PUBLISHABLE KEY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>