force-app/main/default/objects/StripeAuth__c/fields/SECRET_KEY__c.field-meta.xml
<CustomField>
    <fullName>SECRET_KEY__c</fullName>
    <label>SECRET KEY</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>